[Service Runner] Do startsWith check case-insensitive

This codepath is hit when the search query is very short. Fixes "D" and "d" finding different, sometimes no, results.

BUG: 394202
FIXED-IN: 5.12.6

Differential Revision: https://phabricator.kde.org/D12927